--- a/tonia2.html
+++ b/tonia2.html
@@ -25,7 +25,7 @@
   <body>
 
     <div style="position: absolute; right: 1; left: 0; margin-top: .5%;" class="d-none d-lg-block ms-lg-3">
-                            <a class="btn custom-btn custom-border-btn" data-bs-toggle="offcanvas" href="../activities/index.html" role="button" aria-controls="offcanvasExample">Home</a>
+                            <a class="btn custom-btn custom-border-btn" data-bs-toggle="offcanvas" href="../activities/index.html" role="button" aria-controls="offcanvasExample">Back</a>
                         </div>
  
     <section id="pics">
