--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
   <body>
  
 
- <div style="position: absolute; right: 1; left: 0; margin-top: .5%;" class="d-none d-lg-block ms-lg-3">
-                            <a class="btn custom-btn custom-border-btn" data-bs-toggle="offcanvas" href="../activities/index.html" role="button" aria-controls="offcanvasExample">Back</a>
+ <div style="position: absolute; right: 1; left: 0; margin-top: .5%; text-shadow: 2px 2px 4px #000000;" class="d-none d-lg-block ms-lg-3">
+                            <a class="btn custom-btn custom-border-btn" data-bs-toggle="offcanvas" href="../activities/index.html" role="button" aria-controls="offcanvasExample">Home</a>
                         </div>
     <section id="pics">
      
-      <h3 style="text-decoration-color: white;">Ako</h3>
+      <h3 style="text-decoration-color: white; text-shadow: 2px 2px 4px #000000;">Ako</h3>
       <img
         src="funny pics/46.jpg"
       />
