--- a/tonia2.html
+++ b/tonia2.html
@@ -24,8 +24,8 @@
     </style>
   <body>
 
-    <div style="position: absolute; right: 1; left: 0; margin-top: .5%;" class="d-none d-lg-block ms-lg-3">
-                            <a class="btn custom-btn custom-border-btn" data-bs-toggle="offcanvas" href="../activities/index.html" role="button" aria-controls="offcanvasExample">Back</a>
+    <div style="position: absolute; right: 1; left: 0; margin-top: .5%; text-shadow: 2px 2px 4px #000000;" class="d-none d-lg-block ms-lg-3">
+                            <a class="btn custom-btn custom-border-btn" data-bs-toggle="offcanvas" href="../activities/index.html" role="button" aria-controls="offcanvasExample">Home</a>
                         </div>
  
     <section id="pics">
@@ -34,7 +34,7 @@
           id="aro1"
           src="funny pics/left.png"
       /></a>
-      <h3 style="text-decoration-color: white;">si</h3>
+      <h3 style="text-decoration-color: white; text-shadow: 2px 2px 4px #000000;">si</h3>
       <img
         src="funny pics/47.jpg"
       />
