--- a/tonia3.html
+++ b/tonia3.html
@@ -25,8 +25,8 @@
   <body>
  
 
- <div style="position: absolute; right: 1; left: 0; margin-top: .5%;" class="d-none d-lg-block ms-lg-3">
-                            <a class="btn custom-btn custom-border-btn" data-bs-toggle="offcanvas" href="../activities/index.html" role="button" aria-controls="offcanvasExample">Back</a>
+ <div style="position: absolute; right: 1; left: 0; margin-top: .5%; text-shadow: 2px 2px 4px #000000;" class="d-none d-lg-block ms-lg-3">
+                            <a class="btn custom-btn custom-border-btn" data-bs-toggle="offcanvas" href="../activities/index.html" role="button" aria-controls="offcanvasExample">Home</a>
                         </div>
     <section id="pics">
       <a href="tonia2.html">
@@ -34,7 +34,7 @@
           id="aro1"
           src="funny pics/left.png"
       /></a>
-      <h3 style="text-decoration-color: white;">tonia</h3>
+      <h3 style="text-decoration-color: white; text-shadow: 2px 2px 4px #000000;">tonia</h3>
       <img
         src="funny pics/51.jpg"
       />
